# hpc

./: README.md
cuda-hello/: .gitignore  CMakeLists.txt  README.md
cuda-hello/src/: hello.cu
mergesort/: .gitignore  CMakeLists.txt
mergesort/src/: heapsort.cpp  insert.cpp  mergesort.cpp  mergesort_par.cpp  mergesort_seq.cpp
os/: .gitignore  .~lock.simulation_results.csv#  CMakeLists.txt
os/src/: task1.1.cpp  task1.2.cpp
